--- a/openweather.web.app/ClientApp/src/app/app.component.html
+++ b/openweather.web.app/ClientApp/src/app/app.component.html
@@ -1,6 +1,27 @@
 <body>
   <app-nav-menu></app-nav-menu>
   <div class="container">
+
+    <mat-form-field style="width: 300px; margin: 50px auto; display: block;">
+
+      <form [formGroup]="myForm">
+        <mat-form-field>
+          <input type="text" matInput formControlName="namesGroup" required
+                 [matAutocomplete]="autoGroup">
+
+          <mat-autocomplete #autoGroup="matAutocomplete">
+            <mat-optgroup *ngFor="let itemGroup of dataGroupOptions | async" [label]="itemGroup.letter">
+              <mat-option *ngFor="let item of itemGroup.names" [value]="item">
+                {{item}}
+              </mat-option>
+            </mat-optgroup>
+          </mat-autocomplete>
+        </mat-form-field>
+      </form>
+
+    </mat-form-field>
+
+
     <router-outlet></router-outlet>
   </div>
 </body>
