--- a/openweather.web.app/ClientApp/src/app/app.component.html
+++ b/openweather.web.app/ClientApp/src/app/app.component.html
@@ -2,6 +2,23 @@
   <app-nav-menu></app-nav-menu>
   <div class="container">
 
+    <!--<form class="example-form">
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Number</mat-label>
+      <input type="text"
+             placeholder="Pick one"
+             aria-label="Number"
+             matInput
+             [formControl]="myControl"
+             [matAutocomplete]="auto">
+      <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+          {{option}}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+  </form>
+
     <mat-form-field style="width: 300px; margin: 50px auto; display: block;">
 
       <form [formGroup]="myForm">
@@ -20,7 +37,7 @@
       </form>
 
     </mat-form-field>
-
+-->
 
     <router-outlet></router-outlet>
   </div>
