--- a/openweather.web.app/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/openweather.web.app/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -1,5 +1,16 @@
 <h1 id="tableLabel">Weather forecast</h1>
 
+<mat-form-field>
+   <mat-label>
+      Place
+   </mat-label>
+  <input matInput type="text" [matAutocomplete]="auto" />
+  <mat-autocomplete #auto="matAutocomplete">
+    <mat-option *ngFor="let item of options">
+      {{item}}
+    </mat-option>
+  </mat-autocomplete>
+</mat-form-field>
 <p>This component demonstrates fetching data from the server.</p>
 
 <p *ngIf="!forecasts"><em>Loading...</em></p>
