--- a/openweather.web.app/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/openweather.web.app/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -1,32 +1,5 @@
-<h1 id="tableLabel">Weather forecast</h1>
 
-<!--<mat-form-field>
-   <mat-label>
-      Place
-   </mat-label>
-  <input matInput type="text" [matAutocomplete]="auto" />
-  <mat-autocomplete #auto="matAutocomplete">
-    <mat-option *ngFor="let item of options">
-      {{item}}
-    </mat-option>
-  </mat-autocomplete>
-</mat-form-field>-->
-<div class="container" role="main">
-  <div class="row">
-    <div class="col-md-12">
-      <h1>Google AutoComplete Demo</h1>
-    </div>
-  </div>
-  <form class="form-horizontal" #SearchPlacesForm="ngForm">
-    <div class="form-group">
-      <label class="control-label col-sm-6" for="txtSearchPlaces">search places:</label>
-      <div class="col-sm-6">
-        <input type="text" class="form-control" id="txtSearchPlaces" name="txtSearchPlaces" #txtSearchPlaces="ngModel"
-               [(ngModel)]="shippingAddress" placeholder="Enter places">
-      </div>
-    </div>
-  </form>
-</div>
+<app-weather></app-weather>
 
 <p>This component demonstrates fetching data from the server.</p>
 
