added restful api method in the weatherforecast controller

--- a/openweather.web.app/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/openweather.web.app/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -1,7 +1,7 @@
 
 <app-weather></app-weather>
 
-<p>This component demonstrates fetching data from the server.</p>
+<!--<p>This component demonstrates fetching data from the server.</p>
 
 <p *ngIf="!forecasts"><em>Loading...</em></p>
 
@@ -23,3 +23,4 @@
     </tr>
   </tbody>
 </table>
+  -->
